--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ disnake>=2.7
 lavalink>=4.0
 pynacl>=1.5
 spotipy>=2.22
+youtube_dl>=2021
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
