--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ lavalink>=4.0
 pynacl>=1.5
 spotipy>=2.22
 youtube_dl>=2021
+requests
+beautifulsoup4
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
