--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ spotipy>=2.22
 youtube_dl>=2021
 requests
 beautifulsoup4
+youtube-related
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
