--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 disnake>=2.7
 lavalink>=4.0
 pynacl>=1.5
-spotipy>=2.22
-youtube_dl>=2021
+spotipy==2.23.0
+requests==2.28.2
+beautifulsoup4==4.12.2
 colorlog
-requests
-beautifulsoup4
 python-dotenv
+yt-dlp
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
