--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /locale/zh_TW.json
-    translation: /locale/%locale_with_underscore%.json
+    translation: /locale/%two_letters_code%.json
