📦 chore(requirements.txt): update dependencies versions and add missing newline at end of file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-lavalink>=4.0
-pynacl>=1.5
+lavalink==4.0.6
+PyNaCl==1.5.0
 spotipy==2.23.0
 requests==2.28.2
 beautifulsoup4==4.12.2
-disnake
-colorlog
-python-dotenv
-yt-dlp
+disnake==2.8.1
+colorlog==6.7.0
+python-dotenv==1.0.0
+yt-dlp==2023.3.4
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
