--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# Config files
+configs/lavalink.json
+configs/icons.json
+
 # Personal files
 startup.sh
