--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,13 +15,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile -t ghcr.io/nat1anwastaken/lava:$(date +%s) -t docker.io/nat1anwastaken/lava:$(date +%s)
+        run: docker build . --file Dockerfile -t ghcr.io/nat1anwastaken/lava:latest
 
       - name: Login to GitHub Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
 
       - name: Push to GitHub Registry
-        run: docker push ghcr.io/nat1anwastaken/lava:$(date +%s)
-
-      - name: Push to Docker Hub
-        run: docker push docker.io/nat1anwastaken/lava:$(date +%s)
+        run: docker push ghcr.io/nat1anwastaken/lava:latest
