🔄 chore(docker-compose.yml): update env_file path to stack.env for consistency 🔧 refactor(docker-compose.yml): move network definition to the top for better readability and organization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     restart: always
     env_file:
-      - .env
+      - stack.env
     environment:
       - TOKEN=$TOKEN
       - SPOTIFY_CLIENT_ID=$SPOTIFY_CLIENT_ID
