--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ disnake==2.9.1
 colorlog==6.8.0
 python-dotenv==1.0.0
 yt-dlp==2023.12.30
-git+https://github.com/Snipy7374/disnake-ext-paginator.git
+youtube-related
+youtube-search
