🐳 chore(docker-compose.yml): update Lava service to use a pre-built Docker image from ghcr.io/nat1anwastaken/lava:latest instead of building locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   lava:
-    build: .
+    image: ghcr.io/nat1anwastaken/lava:latest
     restart: always
     env_file:
       - stack.env
