--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,11 @@ jobs:
 
       # Build and push Docker image
       - name: Build and push
-        uses: docker/bake-action@v4
+        uses: docker/build-push-action@v5
         with:
+          context: .
+          file: ./Dockerfile
           push: true
+          tags: ghcr.io/nat1anwastaken/lava:latest
+          # Specify the platforms you want to build for
+          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
