--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-lavalink==5.1.0
 PyNaCl==1.5.0
 spotipy==2.23.0
 requests==2.31.0
@@ -10,4 +9,5 @@ yt-dlp==2023.12.30
 colorlog
 youtube-related
 youtube-search
+git+https://github.com/Nat1anWasTaken/Lavalink.py.git
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
