deploy: 26e63a7239046ef72567941701142273380fe633

--- a/results/Code_Inspection/projectStructure/ProjectFingerprint.json
+++ b/results/Code_Inspection/projectStructure/ProjectFingerprint.json
@@ -1,12 +1,13 @@
 {
   "languages": [
     "Python",
+    "XML",
+    ".gitignore (GitIgnore)",
     "Plain text",
     "Shell Script",
     "JSON",
     "YAML",
     "textmate",
-    ".gitignore (GitIgnore)",
     "Requirements"
   ]
 }
