--- a/results/projectStructure/ProjectFingerprint.json
+++ b/results/projectStructure/ProjectFingerprint.json
@@ -1,12 +1,13 @@
 {
   "languages": [
     "Python",
+    "XML",
+    ".gitignore (GitIgnore)",
     "Plain text",
     "Shell Script",
     "JSON",
     "YAML",
     "textmate",
-    ".gitignore (GitIgnore)",
     "Requirements"
   ]
 }
