🔧 chore(docker-compose.yml): add build context to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   lava:
     image: ghcr.io/nat1anwastaken/lava:latest
+    build: .
     restart: always
     env_file:
       - stack.env
