chore(docker-compose.yml): update volume path to /app/configs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     env_file:
       - stack.env
     volumes:
-      - "./configs:/lava/configs"
+      - "./configs:/app/configs"
     depends_on:
       - lavalink
     networks:
