feat(requirements.txt): add Lavalink.py and disnake-ext-paginator dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ pylrc==0.1.2
 colorlog
 youtube-related
 youtube-search
+git+https://github.com/Nat1anWasTaken/Lavalink.py.git
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
