--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ python-dotenv==1.0.1
 yt-dlp==2024.7.9
 aiohttp==3.9.5
 imageio==2.35.0
-syncedlyrics==1.0.0
 pylrc==0.1.2
+syncedlyrics==1.0.0
+nodriver==0.32
+undetected-chromedriver==3.5.5
 colorlog
 git+https://github.com/Nat1anWasTaken/Lavalink.py.git
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
