--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 dependencies = [
-  "pynacl==1.5.0",
+  "PyNaCl==1.5.0",
   "spotipy==2.25.1",
   "requests==2.32.4",
   "beautifulsoup4==4.13.4",
@@ -13,9 +13,10 @@ dependencies = [
   "pylrc==0.1.2",
   "syncedlyrics==1.0.1",
   "colorlog",
-  "lavalink",
+  "lavalink @ git+https://github.com/Mantouisyummy/Lavalink.py.git",
+  "disnake-ext-paginator @ git+https://github.com/Snipy7374/disnake-ext-paginator.git",
 ]
-name = ""
+name = "lava-discord-bot"
 version = "0.0.1"
 
 [tool.uv]
