feat(*): add API server setup and configuration with fastapi and uvicorn

--- a/example.stack.env
+++ b/example.stack.env
@@ -1,6 +1,8 @@
 TOKEN=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+API_HOST=0.0.0.0
+API_PORT=8000
 
 # LOGGING_LEVEL_ROOT=INFO
 # LOGGING_LEVEL_LAVALINK=INFO
