Refactoring: Fixed locale type in LavaPlayer and refactored some code.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 PyNaCl==1.5.0
-spotipy==2.24.0
-requests==2.32.3
-beautifulsoup4==4.12.3
-psutil==6.0.0
-disnake==2.9.2
-python-dotenv==1.0.1
-yt-dlp==2024.10.7
-aiohttp==3.10.2
-imageio==2.35.1
+spotipy==2.25.1
+requests==2.32.4
+beautifulsoup4==4.13.4
+psutil==7.0.0
+disnake==2.10.1
+python-dotenv==1.1.0
+yt-dlp==2025.6.9
+aiohttp==3.12.13
+imageio==2.37.0
 pylrc==0.1.2
+syncedlyrics==1.0.1
 colorlog
-git+https://github.com/Mantouisyummy/asyncedlyrics.git
-git+https://github.com/Mantouisyummy/Lavalink.py.git
+lavalink
 git+https://github.com/Snipy7374/disnake-ext-paginator.git
